--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -22,10 +22,10 @@
   color: #ffffff;
 }
 
-section {
-  margin: 20px auto;
-  padding: 20px;
-}
+// section {
+//   margin: 20px auto;
+//   padding: 20px;
+// }
 
 .section-header {
   font-size: 48px;
@@ -70,4 +70,9 @@ section {
     padding: 10px 20px;
     font-size: 14px;
   }
+}
+
+.coat-dig {
+  width: 20px;
+  height: auto;
 }
