--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -16,7 +16,8 @@
       </p>
     </div>
     <div class="col-md-4 d-none d-md-flex justify-content-center gx-4">
-      <img class="img-fluid" src="assets/images/hero-image.png" alt="">
+      <!-- <img class="img-fluid" src="assets/images/hero-image.png" alt=""> -->
+      <img class="img-fluid" src="assets/coat-of-arms-of-nigeria-logo.png" alt="">
     </div>
   </div>
 
@@ -42,24 +43,20 @@
 
   <section class="digitization">
     <div class="row justify-content-center align-items-center">
-      <div class="col-md-5 d-flex justify-content-center">
+      <div class="col-md-4 d-none d-md-flex justify-content-center">
         <img class="img-fluid" src="assets/images/digitizing-image.png" alt="">
       </div>
-      <div class="col-md-7">
+      <div class="col-md-8">
         <p class="section-header col-md-10">
           Digitizing all <span class="text-primary">Functions </span> <span class="text-secondary-2">Of The
             School</span> Feeding Programme.
         </p>
 
-        <div class="d-flex">
-          <div class="mr-4">
+        <div class="row">
+          <div class="col-md">
             <p class="section-description">
-              <img class="img-fluid mr-2" src="assets/images/digitizing-1.png" alt="">
-              <span> Manage Farmers </span>
-            </p>
-            <p class="section-description">
-              <img class="img-fluid mr-2" src="assets/images/digitizing-2.png" alt="">
-              <span> Manage Caterers </span>
+              <img class="coat-dig img-fluid mr-2" src="assets/coat-of-arms-of-nigeria-logo.png" alt="">
+              <span> Ministry of Education </span>
             </p>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-3.png" alt="">
@@ -70,30 +67,38 @@
               <span> Manage Students </span>
             </p>
           </div>
-          <div>
+
+          <div class="col-md">
             <p class="section-description">
-              <img class="img-fluid mr-2" src="assets/images/digitizing-4.png" alt="">
-              <span> Ministry of Agric. </span>
-            </p>
-            <p class="section-description">
-              <img class="img-fluid mr-2" src="assets/images/digitizing-5.png" alt="">
+              <img class="coat-dig img-fluid mr-2" src="assets/coat-of-arms-of-nigeria-logo.png" alt="">
               <span> Ministry of Health </span>
             </p>
             <p class="section-description">
-              <img class="img-fluid mr-2" src="assets/images/digitizing-6.png" alt="">
-              <span> Ministry of Education </span>
+              <img class="img-fluid mr-2" src="assets/images/digitizing-2.png" alt="">
+              <span> Manage Caterers </span>
+            </p>
+          </div>
+
+          <div class="col-md">
+            <p class="section-description">
+              <img class="coat-dig img-fluid mr-2" src="assets/coat-of-arms-of-nigeria-logo.png" alt="">
+              <span> Ministry of Agric. </span>
+            </p>
+            <p class="section-description">
+              <img class="img-fluid mr-2" src="assets/images/digitizing-1.png" alt="">
+              <span> Manage Farmers </span>
             </p>
           </div>
         </div>
 
-        <button class="btn btn-primary">
+        <!-- <button class="btn btn-primary">
           About us
-        </button>
+        </button> -->
       </div>
     </div>
   </section>
 
-  <section class="download-section">
+  <!-- <section class="download-section">
     <div class="row justify-content-center align-items-center">
 
       <div class="col-md-7">
@@ -117,7 +122,7 @@
         <img class="img-fluid" src="assets/images/download-section.png" alt="">
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="footer">
     <p class="text-center">
