After first Pre. review

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -106,7 +106,7 @@
         </div>
 
         <mat-menu #healthMenu="matMenu">
-          <button [routerLink]="['/user/farmer-list']" mat-menu-item mat-menu-item>Farmers</button>
+          <button [routerLink]="['/user/caterer-list']" mat-menu-item mat-menu-item>Caterers</button>
         </mat-menu>
 
         <mat-menu #eduMenu="matMenu">
