After Second  review

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,24 +4,10 @@
   <app-auth-navbar [showNav]=true></app-auth-navbar>
 
   <div class="row justify-content-center align-items-center hero-section container-fluid">
-    <div class="my-md-auto col-md-8">
-      <p class="hero-text-main">
-        Digital <span class="text-primary">Solution</span> For <span class="text-primary">Managing</span> School Feeding
-        <span class="text-secondary-2">Programme </span> Across The Country.
-      </p>
-      <p class="hero-description">
-        The portal is designed to help maintain and upload the data of caterers, farmers, students, and schools across
-        each state and LGA for the school feeding project.
-        <!-- Lorem ipsum dolor sit amet consectetur. Elit risus quam malesuada eget cras integer maecenas. -->
-      </p>
-    </div>
-    <div class="col-md-4 d-none d-md-flex justify-content-center gx-4">
-      <!-- <img class="img-fluid" src="assets/images/hero-image.png" alt=""> -->
-      <img class="img-fluid" src="assets/coat-of-arms-of-nigeria-logo.png" alt="">
-    </div>
+    <img class="coat img-fluid" src="assets/coat-of-arms-of-nigeria-logo.png" alt="">
   </div>
 
-  <section class="special-offers">
+  <!-- <section class="special-offers">
     <div class="mx-auto col-md-8">
       <p class="section-header text-center">
         <span class="text-primary">Detailed Analysis</span> & <span class="text-secondary-2">Dashboard</span>
@@ -34,12 +20,9 @@
 
       <div class="d-flex align-items-center justify-content-center px-4">
         <img class="img-fluid px-4" src="assets/images/undraw_data_trends_re_2cdy.svg" alt="">
-        <!-- <img class="img-fluid px-4" src="assets/images/special-offer-2.png" alt="">
-        <img class="img-fluid px-4" src="assets/images/special-offer-3.png" alt="">
-        <img class="img-fluid px-4" src="assets/images/special-offer-4.png" alt=""> -->
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="digitization">
     <div class="row justify-content-center align-items-center">
@@ -90,39 +73,9 @@
             </p>
           </div>
         </div>
-
-        <!-- <button class="btn btn-primary">
-          About us
-        </button> -->
       </div>
     </div>
   </section>
-
-  <!-- <section class="download-section">
-    <div class="row justify-content-center align-items-center">
-
-      <div class="col-md-7">
-        <p class="section-header col-md-10">
-          It’s Now <span class="text-primary">More Easy</span> to <span class="text-secondary-2">Manage</span> by Our
-          Mobile <span class="text-primary">App</span>
-        </p>
-        <p class="section-description col-md-8 my-4">
-          Managing is now a breeze with our revamped mobile app! Enjoy quick navigation, personalized tips, real-time
-          tracking, and secure payments—all in one place. Download now for the easiest ordering experience yet!
-        </p>
-
-        <div class="d-flex">
-          <img class="img-fluid mr-2" src="assets/images/mobile-playstore-badge.png" alt="">
-          <img class="img-fluid" src="assets/images/mobile-appstore-badge.png" alt="">
-
-        </div>
-      </div>
-
-      <div class="col-md-5 d-none d-md-flex justify-content-center">
-        <img class="img-fluid" src="assets/images/download-section.png" alt="">
-      </div>
-    </div>
-  </section> -->
 
   <section class="footer">
     <p class="text-center">
