--- a/src/app/user/bulk-carterer-upload/bulk-carterer-upload.component.html
+++ b/src/app/user/bulk-carterer-upload/bulk-carterer-upload.component.html
@@ -8,9 +8,10 @@
             <!-- accept=".xlsx, .xml, .xls, .csv" -->
              <div>
                <input (change)="onFileSelected($event)" #excelInput type="file">
-               <button class="btn btn-primary mr-2">
-                 Download Template
-               </button>
+               <a target="_self" download="wallet-template.csv" class="btn btn-primary mr-2"
+                href="../../../assets/caterer-list.xlsx">
+                Download Template
+              </a>
 
                <button (click)="excelInput.click()" class="btn btn-primary">
                  <i class="fa fa-plus mr-2"></i>
