--- a/src/app/user/bulk-student-upload/bulk-student-upload.component.html
+++ b/src/app/user/bulk-student-upload/bulk-student-upload.component.html
@@ -9,9 +9,10 @@
              <div>
                <input (change)="onFileSelected($event)" #excelInput  type="file">
 
-               <button class="btn btn-primary mr-2">
-                 Download Template
-               </button>
+               <a target="_self" download="wallet-template.csv" class="btn btn-primary mr-2"
+                href="../../../assets/pupil-list.xlsx">
+                Download Template
+              </a>
 
                <button (click)="excelInput.click()" class="btn btn-primary">
                  <i class="fa fa-plus mr-2"></i>
