--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -47,7 +47,7 @@
             </p>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-4.png" alt="">
-              <span> Manage Students </span>
+              <span> Manage Pupils </span>
             </p>
           </div>
 
