--- a/src/app/user/carterer-list/carterer-list.component.html
+++ b/src/app/user/carterer-list/carterer-list.component.html
@@ -128,7 +128,7 @@
                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                 <div class="col-12 row">
                   <div class="col-md">
-                    <p class="mb-0">Number of Students alloted</p>
+                    <p class="mb-0">Number of Pupils alloted</p>
                     <h6>
                       {{100 | number : '1.0-0'}}
                     </h6>
