--- a/src/app/user/staff/staff-level-list/staff-level-list.component.html
+++ b/src/app/user/staff/staff-level-list/staff-level-list.component.html
@@ -6,7 +6,7 @@
       <div class="d-flex justify-content-between">
         <h5>{{title | titlecase}}</h5>
         <button *ngIf="isComp" [routerLink]="'/user/staff-level-create'" class="btn btn-primary">
-          Add Student Level
+          Add Pupil Level
         </button>
       </div>
     </div>
