--- a/src/app/user/staff/staff-list/staff-list.component.html
+++ b/src/app/user/staff/staff-list/staff-list.component.html
@@ -11,7 +11,7 @@
           </button>
 
           <!-- <button *ngIf="isComp" [routerLink]="'/user/staff-create'" class="btn btn-primary">
-            Add Student
+            Add Pupil
           </button> -->
         </div>
       </div>
